# gRPC-programs

./: CMakeLists.txt  README.md  requirements.txt
KNN/: README.md
KNN/client/: client.cpp
KNN/dataset/: dataset.csv  dataset_100.csv  dataset_1000.csv  dataset_100k.csv  dataset_10k.csv  testcase_gen.py
KNN/protofiles/: q2.proto
KNN/server/: server.cpp
MyUber/: README.md
MyUber/client/: driver_client.cpp  main_handler_client.cpp  rider_client.cpp
MyUber/protofiles/: q3.proto
MyUber/server/: q3_pb2.py  q3_pb2.pyi  q3_pb2_grpc.py  server.py
MyUber/server/interceptors/: LogAndAuthInterceptor.py
MyUber/server/service_implementation/: DriverServiceImplementation.py  RiderServiceImplementation.py
MyUber/utils/: certificate_creation_script.sh
